# transpose-from-scratch

./: CMakeLists.txt  README.md
src/: host_main.cu  transpose.cu
src/kernels/: kernel_baseline.cu
